# YouTubeWatcher

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/: browser_driver.py  browser_options.py  docker_firefox.py  firefox.py  video_element.py  watch_strategy.py  youtube.py  youtube_shorts.py
