[tool.poetry]
name = "youtubewatcher"
version = "2.0"
description = "An automated, headless YouTube Shorts Watcher and Scraper"
authors = ["Christian C., Moritz M., Luca S., Ed G."]

[tool.poetry.dependencies]
python = "~=3.11"
selenium = "~=4.15.2"
docker = "~=6.1.3"
webdriver-manager = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''